@@ -1,2 +1,3 @@
 #!/bin/sh
+automake --add-missing
 autoreconf
