@@ -3,9 +3,8 @@
  * A fake libpcap implementation that can only read files without a filter.
  */
 
-#ifdef __cplusplus
-extern "C" {
-#endif
+__BEGIN_DECLS
+
 /*
  * Version number of the current version of the pcap file format.
  *
@@ -15,76 +14,64 @@ extern "C" {
  */
 #define PCAP_VERSION_MAJOR 2
 #define PCAP_VERSION_MINOR 4
-
 #define PCAP_ERRBUF_SIZE 256
     
     
-    typedef struct pcap pcap_t;
-    struct pcap_file_header {
-	uint32_t magic;
-	uint16_t version_major;
-	uint16_t version_minor;
-	int32_t thiszone;	/* gmt to local correction */
-	uint32_t sigfigs;	/* accuracy of timestamps */
-	uint32_t snaplen;	/* max length saved portion of each pkt */
-	uint32_t linktype;	/* data link type (LINKTYPE_*) */
-    };
-    struct pcap_pkthdr {
-	struct timeval ts;	/* time stamp */
-	uint32_t caplen;	/* length of portion present */
-	uint32_t len;	/* length this packet (off wire) */
-    };
+struct pcap_file_header {
+    uint32_t magic;			// d4 c3 b2 a1
+    uint16_t version_major;		// 02 00
+    uint16_t version_minor;		// 04 00
+    int32_t  thiszone;			/* gmt to local correction - 00 00 00 00*/
+    uint32_t sigfigs;	/* accuracy of timestamps */
+    uint32_t snaplen;	/* max length saved portion of each pkt */
+    uint32_t linktype;	/* data link type (LINKTYPE_*) */
+} __attribute__((packed));
+struct pcap_pkthdr {
+    struct timeval ts;	/* time stamp; native */
+    uint32_t caplen;	/* length of portion present */
+    uint32_t len;	/* length this packet (off wire) */
+}__attribute__((packed));
 
-    /*
-     * Taken from pcap-int.h -- For reading saved files
-     */    
-    struct pcap_sf {
-	FILE *rfile;
-	int32_t (*next_packet_op)(pcap_t *, struct pcap_pkthdr *, u_char **);
-	int32_t swapped;
-	size_t hdrsize;
-	swapped_type_t lengths_swapped;
-	int32_t version_major;
-	int32_t version_minor;
-	uint32_t ifcount;    /* number of interfaces seen in this capture */
-	uint32_t tsresol;    /* time stamp resolution */
-	uint32_t tsscale;    /* scaling factor for resolution -> microseconds */
-	uint64_t tsoffset;   /* time stamp offset */
-    };
+/* What we need after opening the file to process each next packet */
+typedef struct pcap pcap_t;
 
-    /*
-     * Taken from pcap-int.h
-     */
-    typedef int (*read_op_t)(pcap_t *, int cnt, pcap_handler, u_char *);
-    read_op_t read_op;
+/*
+ * Taken from pcap-int.h
+ */
+//typedef int (*setfilter_op_t)(pcap_t *, struct bpf_program *);
+typedef void (*pcap_handler)(u_char *, const struct pcap_pkthdr *, const u_char *);
 
-    /*
-     * Taken from pcap-int.h
-     */
-    typedef int (*setfilter_op_t)(pcap_t *, struct bpf_program *);
-    setfilter_op_t setfilter_op;
-    
-    typedef void (*pcap_handler)(u_char *, const struct pcap_pkthdr *, const u_char *);
+struct bpf_program {
+    int valid;				// set true if filter is valid
+};
 
-    struct bpf_program {
-	void *error;			// don't use program in pcap_fake
-    };
+char	*pcap_lookupdev(char *);	// not implemented
+pcap_t	*pcap_open_live(const char *, int, int, int, char *); // not implemented
+pcap_t	*pcap_open_offline(const char *, char *); // open the file; set f
+pcap_t	*pcap_fopen_offline(FILE *fp,char *errbuf);
+void	pcap_close(pcap_t *);			  // close the file
+int	pcap_loop(pcap_t *, int, pcap_handler, u_char *); // read the file and call loopback on each packet
+int	pcap_datalink(pcap_t *);			  // noop
+int	pcap_setfilter(pcap_t *, struct bpf_program *);	  // noop
+int	pcap_compile(pcap_t *, struct bpf_program *, const char *, int, uint32_t); // generate error if filter provided
+char	*pcap_geterr(pcap_t *);
+/*
+ * These are the types that are the same on all platforms, and that
+ * have been defined by <net/bpf.h> for ages.
+ */
+#define DLT_NULL	0	/* BSD loopback encapsulation */
+#define DLT_EN10MB	1	/* Ethernet (10Mb) */
+#define DLT_EN3MB	2	/* Experimental Ethernet (3Mb) */
+#define DLT_AX25	3	/* Amateur Radio AX.25 */
+#define DLT_PRONET	4	/* Proteon ProNET Token Ring */
+#define DLT_CHAOS	5	/* Chaos */
+#define DLT_IEEE802	6	/* 802.5 Token Ring */
+#define DLT_ARCNET	7	/* ARCNET, with BSD-style header */
+#define DLT_SLIP	8	/* Serial Line IP */
+#define DLT_PPP		9	/* Point-to-point Protocol */
+#define DLT_FDDI	10	/* FDDI */
 
-    struct pcap {
-	FILE *f;			// input file we are reading from
-    };
 
-    char	*pcap_lookupdev(char *); // generate an error
-    pcap_t	*pcap_open_live(const char *, int, int, int, char *); // generate an error
-    pcap_t	*pcap_open_offline(const char *, char *); // open the file; set f
-    void	pcap_close(pcap_t *);			  // close the file
-    int	pcap_loop(pcap_t *, int, pcap_handler, u_char *); // read the file and call loopback on each packet
-    int	pcap_datalink(pcap_t *);			  // noop
-    int	pcap_setfilter(pcap_t *, struct bpf_program *);	  // noop
-    int	pcap_compile(pcap_t *, struct bpf_program *, const char *, int, uint32_t); // generate error if filter provided
-    int pcap_offline_read(pcap_t *, int, pcap_handler, u_char *);
-#ifdef __cplusplus
-    };
-#endif
+__END_DECLS
 
-#endif
+
